# macdet

./: .gitignore  README.md  pyproject.toml
backend/: main.py  models.py
backend/data/: __init__.py  view.py
backend/finetuned/: __init__.py  models.py  service.py  utils.py  view.py
backend/longformer/: __init__.py  service.py  utils.py  view.py
backend/news/: __init__.py  constants.py  models.py  service.py  types.py  view.py
backend/static/: scripts.js  styles.css
backend/templates/: index.html
backend/watermark/: __init__.py  extended_watermark_processor.py  helpers.py  models.py  normalizers.py  service.py  utils.py  view.py
