[tool.poetry]
name = "macdet"
version = "0.1.0"
description = "Binary Machine generated text detection"
authors = ["Murat Bayraktar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
transformers = "^4.47.1"
datasets = "^3.2.0"
torch = "^2.5.1"
unidecode = "^1.3.8"
clean-text = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
