[tool.poetry]
name = "macdet"
version = "0.1.0"
description = "Binary Machine generated text detection"
authors = ["Murat Bayraktar"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
transformers = "^4.47.1"
datasets = "^3.2.0"
torch = "^2.5.1"
unidecode = "^1.3.8"
clean-text = "^0.6.0"
httpx = "^0.28.1"
langdetect = "^1.0.9"
scipy = "^1.14.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
nest-asyncio = "^1.6.0"
tqdm = "^4.67.1"
ranx = "^0.3.20"
jinja2 = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
